--- a/configuration.properties
+++ b/configuration.properties
@@ -4,4 +4,6 @@ browser = chrome
 #password = UserUser
 #registration.form.url = https://practice.cydeo.com/registration_form
 web.table.url=https://web-table-2.cydeo.com/login
+web.table.username=Test
+web.table.pw=Tester
 
